# QCADesigner

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  CurrentVerChangeLog  Makefile.am  Makefile.mingw  QCADesigner-win32-gtk.iss.in  QCADesigner-win32.iss  QCADesigner-win32.iss.in  QCADesigner.desktop  QCADesigner.desktop.in  QCADesigner.prj  QCADesigner.prj.bak  QCADesigner.pws  QCADesigner.spec  QCADesigner.spec.in  README  TODO  autogen.sh  config.h.in  configure.in  graph_dialog.desktop.in
docs/: Makefile.am  Makefile.inc  Makefile.mingw
docs/manual/: adding_cells.html  adding_objects.html  bistable_simulation_engine.html  bus_layout.html  cell_functions.html  cell_functions.html.bak  clocking.html  coherence_vector_engine.html  coherence_vector_engine.html.bak  create_import_block.html  digital_simulation_engine.html  exhaustive_verification.html  exhaustive_verification.html.bak  graph_dialog.html  graph_dialog.html.bak  hacking.html  hot_keys.html  index.html  installation.html  managing_layers.html  manipulating_cells.html  manipulating_objects.html  moving_around.html  nonlinear_approximation_engine.html  object_properties.html  print_dialog.html  vector_table.html
docs/manual.src/: adding_objects.html  bistable_simulation_engine.html  bus_layout.html  clocking.html  coherence_vector_engine.html  create_import_block.html  exhaustive_verification.html  graph_dialog.html  hacking.html  hot_keys.html  index.html  installation.html  managing_layers.html  manipulating_objects.html  menu.html  moving_around.html  object_properties.html  print_dialog.html  vector_table.html
docs/ref/: QCADesigner-sections.txt
docs/reference/: Makefile.am  QCADCell.html  QCADCellRendererText.html  QCADComboBox.html  QCADDOContainer.html  QCADLabel.html  QCADLayersCombo.html  QCADObjects.html  QCADPropertyUIDouble.html  QCADPropertyUIEnum.html  QCADPropertyUISingle.html  QCADRadioToolButton.html  QCADRectangleElectrode.html  QCADRuler.html  QCADStretchyObject.html  QCADUndoEntryGroup.html  QCADesigner-QCADParamSpecObjectList.html  QCADesigner-array.html  QCADesigner-bistable-properties-dialog.html  QCADesigner-bistable-simulation.html  QCADesigner-bus-layout-dialog.html  QCADesigner-callback-helpers.html  QCADesigner-coherence-vector.html  QCADesigner-custom-widgets.html  QCADesigner-docs.sgml  QCADesigner-exp-array.html  QCADesigner-exp-pixmap.html  QCADesigner-fileio-helpers.html  QCADesigner-fileio.html  QCADesigner-generic-utils.html  QCADesigner-graph-dialog-callbacks.html  QCADesigner-graph-dialog.html  QCADesigner-hsl2rgb.html  QCADesigner-layer-order-dialog.html  QCADesigner-matrixlib-3x3.html  QCADesigner-mouse-handlers.html  QCADesigner-object-helpers.html  QCADesigner-print-properties-dialog-callbacks.html  QCADesigner-print-properties-dialog-interface.html  QCADesigner-print-properties-dialog.html  (+20 more)
docs/refmanual/: QCADCellRendererLayerList.html  QCADCellRendererVT.html  QCADClockingLayer.html  QCADCompoundDO.html  QCADDesignObject.html  QCADElectrode.html  QCADFlexiCombo.html  QCADLayer.html  QCADObject.html  QCADPrintDialog.html  QCADPropertyUI.html  QCADPropertyUIBoolean.html  QCADPropertyUIGroup.html  QCADPropertyUIInt.html  QCADPropertyUINumeric.html  QCADPropertyUIObjectList.html  QCADPropertyUIText.html  QCADPropertyUIs.html  QCADRadioButton.html  QCADSubstrate.html  QCADToggleToolButton.html  QCADUndoEntry.html  QCADUndoEntryObjectState.html  QCADUndoRedo.html  QCADWidgets.html  QCADWorkaroundWidgets.html  QCADesigner-QCADParamSpecTypeList.html  QCADesigner-about.html  QCADesigner-callbacks.html  QCADesigner-coherence-vector-properties-dialog.html  QCADesigner-design.html  QCADesigner-drag-rect.html  QCADesigner-file-selection-window.html  QCADesigner-global-consts.html  QCADesigner-graph-dialog-data.html  QCADesigner-graph-dialog-interface.html  QCADesigner-interface.html  QCADesigner-layer-mapping-dialog.html  QCADesigner-preamble.html  QCADesigner-print-graph-properties-dialog.html  (+10 more)
pixmaps/: Makefile.am  Makefile.mingw  about.xpm  center_on_pages.xpm  clocking_oval.xpm  clocking_polygon.xpm  default.xpm  eraser.xpm  landscape.xpm  no_center_on_pages.xpm  portrait.xpm  print_down_then_over.xpm  print_over_then_down.xpm  properties.xpm  q_cell_array.xpm  q_cell_def.xpm  q_cell_majority.xpm  q_cell_mirror.xpm  q_cell_move.xpm  q_cell_pan.xpm  q_cell_rotate.xpm  zoom_extents.xpm  zoom_in.xpm  zoom_out.xpm
po/: .gitignore  Makefile.in.in  de.po  (+8 more)
src/: .gitignore  6cell_comp.qca  Makefile.am  Makefile.broken  Makefile.inc  Makefile.mingw  Makefile.snippet  Makefile.working  about.c  about.h  actions.h  bistable_properties_dialog.c  bistable_properties_dialog.h  bistable_simulation.c  bistable_simulation.h  blocking_dialog.c  blocking_dialog.h  bus_layout_dialog.c  bus_layout_dialog.h  cad.c  cad.h  cad_util.c  cad_util.h  callback_helpers.h  callbacks.c  callbacks.h  cell.cpp  cell.h  cell_function_dialog.c  cell_function_dialog.h  cell_info.cpp  cell_info.h  cell_neighbor.cpp  cell_neighbor.h  cell_properties_dialog.c  cell_properties_dialog.h  clock_select_dialog.c  clock_select_dialog.h  coherence_vector.bak2  coherence_vector.bak3.c  (+182 more)
src/actions/: action_handlers.h  array.c  cell_function.c  default.c  delete.c  mirror.c  pan.c  rotate.c  select.c  single_cell.c
src/objects/: QCADCell.c  QCADCell.h  QCADCellRendererLayerList.c  QCADCellRendererLayerList.h  QCADCellRendererText.c  QCADCellRendererText.h  QCADCellRendererVT.c  QCADCellRendererVT.h  QCADClockCombo.c  QCADClockCombo.h  QCADClockingLayer.c  QCADClockingLayer.h  QCADClockingZone.c  QCADClockingZone.h  QCADComboBox.c  QCADComboBox.h  QCADCompoundDO.c  QCADCompoundDO.h  QCADDOContainer.h  QCADDesignObject.c  QCADDesignObject.h  QCADDistributionLayer.c  QCADDistributionLayer.h  QCADDrawingObject.c  QCADDrawingObject.h  QCADElectrode.c  QCADElectrode.h  QCADFlexiCombo.c  QCADFlexiCombo.h  QCADLabel.c  QCADLabel.h  QCADLayer.c  QCADLayer.h  QCADLayer_priv.c  QCADLayer_priv.h  QCADLayer_properties.c  QCADLayer_properties.h  QCADLayersCombo.c  QCADLayersCombo.h  QCADObject.c  (+60 more)
src/sundials/: sundials_config.h
(+15 files in other folders)
