## Process this file with automake to produce Makefile.in

filesdir = $(datadir)/QCADesigner
appdir = $(datadir)/applications

SUBDIRS = src po pixmaps docs

files_DATA = \
  AUTHORS \
  COPYING \
  ChangeLog \
  README \
  README.win32.txt

app_DATA = QCADesigner.desktop

EXTRA_DIST = $(files_DATA) $(app_DATA)
