pixmapdir= $(datadir)/pixmaps/QCADesigner
appicondir= $(datadir)/pixmaps

pixmap_DATA=\
  QCADesigner.ico \
  QCADesigner.svg \
  QCADesigner.win32.ico \
  QCADesigner.winxp.ico \
  QCADesigner_0_48x48x24a.png \
  QCADesigner_1_32x32x24a.png \
  QCADesigner_2_16x16x24a.png \
  QCADesigner_3_48x48x24.png \
  QCADesigner_4_32x32x24.png \
  QCADesigner_5_16x16x24.png \
  QCADesigner_6_48x48x8.png \
  QCADesigner_7_32x32x8.png \
  QCADesigner_8_16x16x8.png \
  about.xpm \
  center_on_pages.xpm \
  clocking_oval.xpm \
  clocking_polygon.xpm \
  default.xpm \
  eraser.xpm \
  landscape.xpm \
  no_center_on_pages.xpm \
  portrait.xpm \
  print_down_then_over.xpm \
  print_over_then_down.xpm \
  properties.xpm \
  q_cell_array.xpm \
  q_cell_def.xpm \
  q_cell_majority.xpm \
  q_cell_mirror.xpm \
  q_cell_move.xpm \
  q_cell_pan.xpm \
  q_cell_rotate.xpm \
  zoom_extents.xpm \
  zoom_in.xpm \
  zoom_out.xpm

appicon_DATA = QCADesigner-icon.png

EXTRA_DIST=$(pixmap_DATA) $(appicon_DATA)
